--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 # the repo. Unless a later match takes precedence,
 # the owners listed below will be requested for
 # review when someone opens a pull request.
-*       @platform-engineering
+*       @bankrate/platform-engineering
